* Fix: Broken layout introduced by missing responsive for embedded playlist, iframe and iframe2 * Fix: Replace amp's with HTML entity in thumbnail link * Add: Option to disable thumbnail tooltips (shortcode parameter no_thumb_title) * Add: List of Shortcode attributes to README file * Add: Danis localisation by GSAdev v. Georg Adamsen * Micro optimizations
git-svn-id: https://plugins.svn.wordpress.org/youtube-channel/trunk@1142619 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/css/youtube-channel.css
+++ b/assets/css/youtube-channel.css
@@ -1,4 +1,3 @@
-
 .youtube_channel {
 	float: left;
 	clear: both;
@@ -75,22 +74,22 @@ padding-bottom: 75%;
 }
 
 /* responsive iframe */
-.youtube_channel.responsive .ytc_video_container.ar16_9 {
+.youtube_channel.responsive .ytc_video_container.ar16_9 .fluid-width-video-wrapper {
 	position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
 	height: 0;
 }
-.youtube_channel.responsive .ytc_video_container.ar16_10 {
+.youtube_channel.responsive .ytc_video_container.ar16_10 .fluid-width-video-wrapper {
 	position: relative;
 	padding-bottom: 62.5%; /* 16:10 */
 	height: 0;
 }
-.youtube_channel.responsive .ytc_video_container.ar4_3 {
+.youtube_channel.responsive .ytc_video_container.ar4_3 .fluid-width-video-wrapper {
 	position: relative;
 	padding-bottom: 75%; /* 4:3; */
 	height: 0;
 }
-.youtube_channel.responsive .ytc_video_container iframe {
+.youtube_channel.responsive .ytc_video_container .fluid-width-video-wrapper iframe {
 	position: absolute;
 	top: 0;
 	left: 0;
